# TE_IT_OSL

./: A8.c  CMakeLists.txt  main.c  rough.c  rough2.c  rough3.c  rough4.c  rough5.c
A1b/: A1b_address_book.sh
A2a/: A2a_orphan.c  A2a_zombie.c  orphan.c  zombie.c
A2b/: A2b_child.c  A2b_parent.c  child.c  parent.c
A3/: A3_round_robin.c  A3_round_robin.cpp  A3_round_robin_.c  A3_round_robin_FINAL.c  A3_round_robin_using_queue.c  A3_sjf_without_arrival_time.c  A3_srtf_FINAL.c  A3_srtf_with_arrival_time.c  A3_srtf_with_arrival_time_FINAL.c
A4a/: A4a_producer_consumer.c
A4b/: A4b_reader_writer.c
A5/: A5.c  A5_FINAL.c  A5_bankers_algo.c
A6/: A6_FINAL.c  A6_fifo.c  A6_lru.c
A7a/: A7a_fifo1.c  A7a_fifo2.c
A7b/: A7b_reader.c  A7b_writer.c
A8/: A8.c  A8_sstf.c
